# discord-bot-for-trpg

./: .gitignore  Cargo.toml  README.md
src/: main.rs  msg  runtime.rs
src/parser/: ast.rs  mod.rs
src/runtime/: built_in_function.rs  environment.rs
