[package]
name = "uectrpg_dicebot"
version = "0.1.0"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6"
regex = "1"
serde_json="1.0"
rand="0.7"
async-std="1.8"

[dependencies.serenity]
version = "0.9"
default-features=false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend"
]

[dependencies.tokio]
version = "0.2"
features = ["full"]
